Compiler Java 1.8 and Java 11 support

--- a/pom.xml
+++ b/pom.xml
@@ -131,14 +131,22 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.8.1</version>
-					<!--					<configuration>-->
-					<!--						<compilerArgs>-->
-					<!--							<arg>-parameters</arg>-->
-					<!--<arg>-verbose</arg>-->
-					<!--							<arg>-Xlint:unchecked</arg>-->
-					<!--						</compilerArgs>-->
-					<!--					</configuration>-->
+					<configuration>
+						<compilerArgs>
+							<arg>-parameters</arg>
+							<!--<arg>-verbose</arg>-->
+							<!--<arg>-Xlint:unchecked</arg>-->
+						</compilerArgs>
+					</configuration>
 					<executions>
+						<execution>
+							<id>default-compile</id>
+							<configuration>
+								<jdkToolchain>
+									<version>1.8</version>
+								</jdkToolchain>
+							</configuration>
+						</execution>
 						<execution>
 							<id>java11-main</id>
 							<phase>compile</phase>
@@ -154,59 +162,14 @@
 									<compileSourceRoot>${project.basedir}/src/main/java11</compileSourceRoot>
 								</compileSourceRoots>
 								<multiReleaseOutput>true</multiReleaseOutput>
+								<!--
+								<compilerArgs>
+									<arg> - - patch-module</arg>
+									<arg>${project.Automatic-Module-Name}=${project.build.outputDirectory}</arg>
+								</compilerArgs>
+								-->
 							</configuration>
 						</execution>
-						<!--		<execution>-->
-						<!--							<id>default-compile</id>-->
-						<!--							<phase>compile</phase>-->
-						<!--							<goals>-->
-						<!--								<goal>compile</goal>-->
-						<!--							</goals>-->
-						<!--							<configuration>-->
-						<!--								<source>1.8</source>-->
-						<!--								<target>1.8</target>-->
-						<!--								<jdkToolchain>-->
-						<!--									<version>1.8</version>-->
-						<!--								</jdkToolchain>-->
-						<!--								<compileSourceRoots>-->
-						<!--									<compileSourceRoot>${project.basedir}/src/main/java</compileSourceRoot>-->
-						<!--								</compileSourceRoots>-->
-						<!--							</configuration>-->
-						<!--						</execution>-->
-						<!--						<execution>-->
-						<!--							<id>java11-test</id>-->
-						<!--							<phase>test-compile</phase>-->
-						<!--							<goals>-->
-						<!--								<goal>testCompile</goal>-->
-						<!--							</goals>-->
-						<!--							<configuration>-->
-						<!--								<release>11</release>-->
-						<!--								<jdkToolchain>-->
-						<!--									<version>11</version>-->
-						<!--								</jdkToolchain>-->
-						<!--								<testCompileSourceRoots>-->
-						<!--									<testCompileSourceRoot>${project.basedir}/src/test/java11</testCompileSourceRoot>-->
-						<!--								</testCompileSourceRoots>-->
-						<!--								<multiReleaseOutput>true</multiReleaseOutput>-->
-						<!--							</configuration>-->
-						<!--						</execution>-->
-						<!--						<execution>-->
-						<!--							<id>default-testCompile</id>-->
-						<!--							<phase>test-compile</phase>-->
-						<!--							<goals>-->
-						<!--								<goal>testCompile</goal>-->
-						<!--							</goals>-->
-						<!--							<configuration>-->
-						<!--								<source>1.8</source>-->
-						<!--								<target>1.8</target>-->
-						<!--								<jdkToolchain>-->
-						<!--									<version>1.8</version>-->
-						<!--								</jdkToolchain>-->
-						<!--								<compileSourceRoots>-->
-						<!--									<compileSourceRoot>${project.basedir}/src/main/java</compileSourceRoot>-->
-						<!--								</compileSourceRoots>-->
-						<!--							</configuration>-->
-						<!--						</execution>-->
 					</executions>
 				</plugin>
 				<plugin>
@@ -518,6 +481,7 @@
 			<activation>
 				<jdk>[11,)</jdk>
 			</activation>
+			<!--
 			<build>
 				<plugins>
 					<plugin>
@@ -552,10 +516,13 @@
 					</plugin>
 				</plugins>
 			</build>
+			-->
 			<properties>
 				<base.java.version>11</base.java.version>
+				<!--
 				<maven.compiler.release>11</maven.compiler.release>
 				<project.custom.java.version>11</project.custom.java.version>
+				-->
 			</properties>
 		</profile>
 		<profile>
