--- a/pom.xml
+++ b/pom.xml
@@ -972,7 +972,7 @@
 		<version.com.github.spotbugs>4.0.6</version.com.github.spotbugs>
 		<version.com.puppycrawl.tools.checkstyle>8.34</version.com.puppycrawl.tools.checkstyle>
 		<version.org.apache.commons.lang3>3.10</version.org.apache.commons.lang3>
-		<version.org.apache.logging.log4j>[2.13.0,2.99.99)</version.org.apache.logging.log4j>
+		<version.org.apache.logging.log4j>2.13.0</version.org.apache.logging.log4j>
 		<version.org.hamcrest>[2.2,2.99)</version.org.hamcrest>
 		<version.org.junit.jupiter>[5.6.2,5.6.99)</version.org.junit.jupiter>
 		<version.org.slf4j>[1.7.30,1.7.99)</version.org.slf4j>
