--- a/pom.xml
+++ b/pom.xml
@@ -975,7 +975,7 @@
 		<version.org.apache.logging.log4j>2.13.0</version.org.apache.logging.log4j>
 		<version.org.hamcrest>2.2</version.org.hamcrest>
 		<version.org.junit.jupiter>[5.6.2,5.6.99)</version.org.junit.jupiter>
-		<version.org.slf4j>[1.7.30,1.7.99)</version.org.slf4j>
+		<version.org.slf4j>1.7.30</version.org.slf4j>
 		<!-- qa user properties -->
 		<checkstyle.maxAllowedViolations>0</checkstyle.maxAllowedViolations>
 		<jacoco.bundle.class.missedcount>0</jacoco.bundle.class.missedcount>
