--- a/pom.xml
+++ b/pom.xml
@@ -49,14 +49,14 @@
 		<url>http://github.com/nhojpatrick/nhojpatrick-hamcrest/tree/master</url>
 	</scm>
 	<!--organization / -->
-	<!--build /-->
+	<!--build / -->
 	<build>
 		<pluginManagement>
 			<plugins>
 				<plugin>
 					<groupId>com.github.ekryd.sortpom</groupId>
 					<artifactId>sortpom-maven-plugin</artifactId>
-					<version>${plugins.github.ekryd.sortpom-maven-plugin}</version>
+					<version>${plugins.com.github.ekryd.sortpom.sortpom-maven-plugin}</version>
 					<dependencies>
 						<dependency>
 							<groupId>com.github.nhojpatrick.qa</groupId>
@@ -965,8 +965,8 @@
 		<project.build.sourceEncoding>${project.custom.encoding}</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>${project.custom.encoding}</project.reporting.outputEncoding>
 		<!-- plugin versions -->
+		<plugins.com.github.ekryd.sortpom.sortpom-maven-plugin>2.13.1</plugins.com.github.ekryd.sortpom.sortpom-maven-plugin>
 		<plugins.com.github.spotbugs.spotbugs-maven-plugin>4.2.0</plugins.com.github.spotbugs.spotbugs-maven-plugin>
-		<plugins.github.ekryd.sortpom-maven-plugin>2.13.1</plugins.github.ekryd.sortpom-maven-plugin>
 		<plugins.takari.maven>0.7.7</plugins.takari.maven>
 		<!-- dependency versions -->
 		<version.com.github.spotbugs>4.2.1</version.com.github.spotbugs>
