--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,6 +6,7 @@
   "excludeCommitPaths": ["relocation/**"],
   "labels": ["dependencies"],
   "assignees" : ["nhojpatrick"],
+  "additionalReviewers": ["nhojpatrick"],
   "prHourlyLimit": 0,
   "separateMinorPatch": true,
   "separateMultipleMajor": true
