--- a/pom.xml
+++ b/pom.xml
@@ -917,19 +917,11 @@
 				<version>${version.org.hamcrest}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.junit.jupiter</groupId>
-				<artifactId>junit-jupiter-api</artifactId>
-				<version>${version.org.junit.jupiter}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.junit.jupiter</groupId>
-				<artifactId>junit-jupiter-engine</artifactId>
-				<version>${version.org.junit.jupiter}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.junit.jupiter</groupId>
-				<artifactId>junit-jupiter-params</artifactId>
-				<version>${version.org.junit.jupiter}</version>
+				<groupId>org.junit</groupId>
+				<artifactId>junit-bom</artifactId>
+				<version>${version.org.junit}</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
@@ -974,7 +966,7 @@
 		<version.org.apache.commons.lang3>3.12.0</version.org.apache.commons.lang3>
 		<version.org.apache.logging.log4j>2.14.1</version.org.apache.logging.log4j>
 		<version.org.hamcrest>2.2</version.org.hamcrest>
-		<version.org.junit.jupiter>5.8.0-RC1</version.org.junit.jupiter>
+		<version.org.junit>5.8.0-RC1</version.org.junit>
 		<version.org.slf4j>1.7.32</version.org.slf4j>
 		<!-- qa user properties -->
 		<checkstyle.maxAllowedViolations>0</checkstyle.maxAllowedViolations>
