--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,8 +84,8 @@ commands:
           </toolchains>
           EOF
 
-  setup_openjdk_16_toolchain:
-    description: "Setup ToolChain for OpenJdk 16"
+  setup_openjdk_17_toolchain:
+    description: "Setup ToolChain for OpenJdk 17"
     steps:
       - run: mkdir ~/.m2
       - run: |
@@ -100,7 +100,7 @@ commands:
                 <id>openjdk-1.8</id>
               </provides>
               <configuration>
-                <jdkHome>/usr/local/jdk-16.0.2</jdkHome>
+                <jdkHome>/usr/local/jdk-17.0.0</jdkHome>
               </configuration>
             </toolchain>
             <toolchain>
@@ -111,7 +111,7 @@ commands:
                 <id>openjdk-11</id>
               </provides>
               <configuration>
-                <jdkHome>/usr/local/jdk-16.0.2</jdkHome>
+                <jdkHome>/usr/local/jdk-17.0.0</jdkHome>
               </configuration>
             </toolchain>
           </toolchains>
@@ -151,14 +151,14 @@ commands:
           name: "Maven Jdk11 Tests"
           command: ./mvnw -Pcicd verify
 
-  std_mvnw_jdk16:
-    description: "Standard JDK16 mvnw steps"
+  std_mvnw_jdk17:
+    description: "Standard Jdk17 mvnw steps"
     steps:
       - run:
-          name: "Maven Jdk16 Clean Install SkipTests"
+          name: "Maven Jdk17 Clean Install SkipTests"
           command: ./mvnw -Pcicd clean verify -DskipTests
       - run:
-          name: "Maven Jdk16 Tests"
+          name: "Maven Jdk17 Tests"
           command: ./mvnw -Pcicd verify
 
   qa_step:
@@ -275,19 +275,19 @@ jobs:
       - cache_save:
           cacheSaveName: jdk11
 
-  jdk16:
+  jdk17:
     docker:
-      - image: cimg/openjdk:16.0
+      - image: cimg/openjdk:17.0
     resource_class: small
     steps:
-      - setup_openjdk_16_toolchain
+      - setup_openjdk_17_toolchain
       - checkout
       - cache_restore:
-          cacheAlphaName: jdk16
-          cacheBravoName: jdk16
-      - std_mvnw_jdk16
+          cacheAlphaName: jdk17
+          cacheBravoName: jdk17
+      - std_mvnw_jdk17
       - cache_save:
-          cacheSaveName: jdk16
+          cacheSaveName: jdk17
 
   qa_matrix:
     parameters:
@@ -345,14 +345,14 @@ workflows:
       - jdk8
       - jdk8_tests_jdk11
       - jdk11
-      - jdk16
+      - jdk17
 
       - passed_builds:
           requires:
             - jdk8
             - jdk8_tests_jdk11
             - jdk11
-            - jdk16
+            - jdk17
 
       - qa_matrix:
           name: qa_<< matrix.qa_step_profile >>
