--- a/pom.xml
+++ b/pom.xml
@@ -836,6 +836,7 @@
 	<!--modules / -->
 	<modules>
 		<module>all</module>
+		<module>bom</module>
 		<module>collections</module>
 		<module>datetime</module>
 		<module>datetime-java.sql</module>
