nhojpatrick-hamcrest-bom v1.0.3

--- a/pom.xml
+++ b/pom.xml
@@ -727,6 +727,7 @@
 	<!--modules / -->
 	<modules>
 		<module>all</module>
+		<module>bom</module>
 		<module>collections</module>
 		<module>datetime</module>
 		<module>datetime-java.sql</module>
