--- a/pom.xml
+++ b/pom.xml
@@ -647,6 +647,7 @@
 	<!--modules / -->
 	<modules>
 		<module>all</module>
+		<module>bom</module>
 		<module>collections</module>
 		<module>datetime</module>
 		<module>lang</module>
