--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,11 @@
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>${plugins.maven.maven-dependency-plugin}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-deploy-plugin</artifactId>
 					<version>3.0.0-M1</version>
 				</plugin>
@@ -962,6 +967,7 @@
 		<!-- plugin versions -->
 		<plugins.com.github.ekryd.sortpom.sortpom-maven-plugin>3.0.0</plugins.com.github.ekryd.sortpom.sortpom-maven-plugin>
 		<plugins.com.github.spotbugs.spotbugs-maven-plugin>4.5.0.0</plugins.com.github.spotbugs.spotbugs-maven-plugin>
+		<plugins.maven.maven-dependency-plugin>3.2.0</plugins.maven.maven-dependency-plugin>
 		<plugins.takari.maven>0.7.7</plugins.takari.maven>
 		<!-- dependency versions -->
 		<version.com.github.spotbugs>4.5.2</version.com.github.spotbugs>
