--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.1</version>
+					<version>${plugins.maven.maven-compiler-plugin}</version>
 					<!--					<configuration>-->
 					<!--						<compilerArgs>-->
 					<!--							<arg>-parameters</arg>-->
@@ -972,6 +972,7 @@
 		<plugins.com.github.ekryd.sortpom.sortpom-maven-plugin>3.0.0</plugins.com.github.ekryd.sortpom.sortpom-maven-plugin>
 		<plugins.com.github.spotbugs.spotbugs-maven-plugin>4.5.0.0</plugins.com.github.spotbugs.spotbugs-maven-plugin>
 		<plugins.maven.maven-clean-plugin>3.1.0</plugins.maven.maven-clean-plugin>
+		<plugins.maven.maven-compiler-plugin>3.8.1</plugins.maven.maven-compiler-plugin>
 		<plugins.maven.maven-dependency-plugin>3.2.0</plugins.maven.maven-dependency-plugin>
 		<plugins.takari.maven>0.7.7</plugins.takari.maven>
 		<!-- dependency versions -->
