--- a/pom.xml
+++ b/pom.xml
@@ -317,6 +317,11 @@
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-scm-publish-plugin</artifactId>
+					<version>${plugins.maven.maven-scm-publish-plugin}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-site-plugin</artifactId>
 					<version>${plugins.maven.maven-site-plugin}</version>
 				</plugin>
@@ -993,6 +998,7 @@
 		<plugins.maven.maven-pmd-plugin>3.15.0</plugins.maven.maven-pmd-plugin>
 		<plugins.maven.maven-resources-plugin>3.2.0</plugins.maven.maven-resources-plugin>
 		<plugins.maven.maven-scm-plugin>1.12.0</plugins.maven.maven-scm-plugin>
+		<plugins.maven.maven-scm-publish-plugin>3.0.0</plugins.maven.maven-scm-publish-plugin>
 		<plugins.maven.maven-site-plugin>3.10.0</plugins.maven.maven-site-plugin>
 		<plugins.maven.maven-source-plugin>3.2.1</plugins.maven.maven-source-plugin>
 		<plugins.maven.maven-surefire-plugin>3.0.0-M5</plugins.maven.maven-surefire-plugin>
