CircleCI ignore main branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -362,6 +362,7 @@ workflows:
             branches:
               ignore:
                 - develop
+                - main
                 - master
           matrix:
             parameters:
@@ -379,6 +380,7 @@ workflows:
             branches:
               ignore:
                 - develop
+                - main
                 - master
 
       - passed_qa:
