--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -343,9 +343,27 @@ workflows:
   build_all:
     jobs:
       - jdk8
-      - jdk8_tests_jdk11
-      - jdk11
-      - jdk17
+      - jdk8_tests_jdk11:
+          filters:
+            branches:
+              ignore:
+                - develop
+                - main
+                - master
+      - jdk11:
+          filters:
+            branches:
+              ignore:
+                - develop
+                - main
+                - master
+      - jdk17:
+          filters:
+            branches:
+              ignore:
+                - develop
+                - main
+                - master
 
       - passed_builds:
           requires:
