--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
 							<plugin>
 								<groupId>com.mebigfatguy.sb-contrib</groupId>
 								<artifactId>sb-contrib</artifactId>
-								<version>7.4.7</version>
+								<version>${version.com.mebigfatguy.sb-contrib.sb-contrib}</version>
 							</plugin>
 							<plugin>
 								<groupId>jp.skypencil.findbugs.slf4j</groupId>
@@ -1026,6 +1026,7 @@
 		<plugins.org.sonatype.plugins.nexus-staging-maven-plugin>1.6.8</plugins.org.sonatype.plugins.nexus-staging-maven-plugin>
 		<!-- dependency versions -->
 		<version.com.github.spotbugs>4.5.3</version.com.github.spotbugs>
+		<version.com.mebigfatguy.sb-contrib.sb-contrib>7.4.7</version.com.mebigfatguy.sb-contrib.sb-contrib>
 		<version.com.puppycrawl.tools.checkstyle>9.2.1</version.com.puppycrawl.tools.checkstyle>
 		<version.jp.skypencil.findbugs.slf4j.bug-pattern>1.5.0</version.jp.skypencil.findbugs.slf4j.bug-pattern>
 		<version.org.apache.commons.lang3>3.12.0</version.org.apache.commons.lang3>
