Maven Compiler -Xpkginfo:always

--- a/pom.xml
+++ b/pom.xml
@@ -144,13 +144,14 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>${plugins.maven.maven-compiler-plugin}</version>
-					<!--					<configuration>-->
-					<!--						<compilerArgs>-->
-					<!--							<arg>-parameters</arg>-->
-					<!--<arg>-verbose</arg>-->
-					<!--							<arg>-Xlint:unchecked</arg>-->
-					<!--						</compilerArgs>-->
-					<!--					</configuration>-->
+					<configuration>
+						<compilerArgs>
+							<arg>-parameters</arg>
+							<!--							<arg>-verbose</arg>-->
+							<!--							<arg>-Xlint:unchecked</arg>-->
+							<arg>-Xpkginfo:always</arg>
+						</compilerArgs>
+					</configuration>
 					<executions>
 						<execution>
 							<id>java11-main</id>
