--- a/pom.xml
+++ b/pom.xml
@@ -666,6 +666,7 @@
 				</plugins>
 			</build>
 			<properties>
+				<maven.test.skip>true</maven.test.skip>
 				<sort.skip>true</sort.skip>
 			</properties>
 		</profile>
