--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,7 @@
 									<version>11</version>
 								</jdkToolchain>
 								<compileSourceRoots>
+									<compileSourceRoot>${project.basedir}/src/main/java</compileSourceRoot>
 									<compileSourceRoot>${project.basedir}/src/main/java11</compileSourceRoot>
 								</compileSourceRoots>
 								<multiReleaseOutput>true</multiReleaseOutput>
