Maven profile deployableArtifacts

--- a/pom.xml
+++ b/pom.xml
@@ -751,9 +751,8 @@
 			</properties>
 		</profile>
 		<profile>
-			<id>release</id>
+			<id>deployableArtifacts</id>
 			<build>
-				<defaultGoal>gitflow:release</defaultGoal>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -792,6 +791,14 @@
 							</execution>
 						</executions>
 					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>release</id>
+			<build>
+				<defaultGoal>gitflow:release</defaultGoal>
+				<plugins>
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>nexus-staging-maven-plugin</artifactId>
