--- a/pom.xml
+++ b/pom.xml
@@ -1022,7 +1022,7 @@
 		<!-- next minor version -->
 		<project.custom.next.version>1.0.99</project.custom.next.version>
 		<!-- custom properties -->
-		<project.Automatic-Module-Name></project.Automatic-Module-Name>
+		<project.Automatic-Module-Name>com.github.nhojpatrick.hamcrest.n/a</project.Automatic-Module-Name>
 		<project.custom.encoding>UTF-8</project.custom.encoding>
 		<project.custom.java.version>1.8</project.custom.java.version>
 		<!-- maven user properties -->
